--- a/env.html
+++ b/env.html
@@ -127,7 +127,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         - <strong>Machakos:</strong> Semi-arid land reforestation<br>
         - <strong>Mombasa:</strong> Coastal mangrove rehabilitation</p>
     </div>
-    <img src="https://cdn7.dissolve.com/p/D985_71_625/D985_71_625_1200.jpg" class="shape-rounded">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766162316/ChatGPT_Image_Dec_19_2025_07_30_27_PM_mkcwvo.png" class="shape-rounded">
 </section>
 
 <!-- 3. Climate Action Programs -->
