--- a/index.html
+++ b/index.html
@@ -3076,7 +3076,7 @@ document.getElementById("emailLoginBtn").addEventListener("click", async () => {
     await auth.signInWithEmailAndPassword(email, pass);
 
     // REDIRECT TO MEMBERS DASHBOARD
-    window.location.href = "/swissaid/members/dashboard.html";
+    window.location.href = "/members/dashboard.html";
 
   } catch (err) {
     alert(err.message);
@@ -3093,7 +3093,7 @@ document.getElementById("emailSignupBtn").addEventListener("click", async () => 
     await auth.createUserWithEmailAndPassword(email, pass);
 
     // REDIRECT TO MEMBERS DASHBOARD
-    window.location.href = "/swissaid/members/dashboard.html";
+    window.location.href = "/members/dashboard.html";
 
   } catch (err) {
     alert(err.message);
