--- a/index.html
+++ b/index.html
@@ -1459,11 +1459,11 @@ footer.site-footer{
 
 <section class="impact-section" aria-labelledby="impact-heading">
   <div class="impact-container">
-    <h2 id="impact-heading" class="impact-title">Our Global Impact</h2>
+    <h2 id="impact-heading" class="impact-title">Our National Impact</h2>
     <div class="impact-grid">
       <div class="impact-card">
-        <h3>100+</h3>
-        <p>Countries Reached</p>
+        <h3>47 </h3>
+        <p>Counties Reached</p>
       </div>
       <div class="impact-card">
         <h3>1M+</h3>
