--- a/youth.html
+++ b/youth.html
@@ -171,7 +171,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2 data-key="s1-title">Overview of Youth Empowerment</h2>
         <p data-key="s1-p1">Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.</p>
     </div>
-    <img src="https://images.pexels.com/photos/14429344/pexels-photo-14429344.jpeg" class="shape-round">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766165018/ChatGPT_Image_Dec_19_2025_08_22_39_PM_xnkubz.png" class="shape-round">
 </section>
 
 <!-- 2. Mentorship & Leadership -->
@@ -180,7 +180,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2 data-key="s2-title">Mentorship & Leadership Development</h2>
         <p data-key="s2-p1">Youth mentorship programs provide guidance and leadership training in Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.</p>
     </div>
-    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766165018/ChatGPT_Image_Dec_19_2025_08_22_39_PM_xnkubz.png" class="shape-rounded">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="shape-rounded">
 </section>
 
 <!-- 3. Life Skills & Education -->
