--- a/youth.html
+++ b/youth.html
@@ -180,12 +180,12 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2 data-key="s2-title">Mentorship & Leadership Development</h2>
         <p data-key="s2-p1">Youth mentorship programs provide guidance and leadership training in Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.</p>
     </div>
-    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="shape-rounded">
+    <img src="https://images.pexels.com/photos/5675818/pexels-photo-5675818.jpeg" class="shape-rounded">
 </section>
 
 <!-- 3. Life Skills & Education -->
 <section class="section center-section">
-    <img src="https://images.pexels.com/photos/5675818/pexels-photo-5675818.jpeg" class="shape-diagonal">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="shape-diagonal">
     <div class="text">
         <h2 data-key="s3-title">Life Skills & Education</h2>
         <p data-key="s3-p1">We offer programs on decision-making, problem-solving, civic engagement, STEM initiatives, vocational training, and internships. County-specific programs include Nakuru (Njoro youth sports & arts), Machakos (coding clubs & civic leadership), and Mombasa (Likoni & Kisauni volunteer projects).</p>
