--- a/index.html
+++ b/index.html
@@ -2124,7 +2124,7 @@ const translations = {
         
         // IMPACT SECTION
         'impact-title': 'Our Global Impact',
-        'impact-countries': 'Countries Reached',
+        'impact-countries': 'Counties Reached',
         'impact-lives': 'Lives Touched',
         'impact-projects': 'Projects Completed',
         'impact-volunteers': 'Volunteers Engaged',
@@ -2224,7 +2224,8 @@ const translations = {
 
         // IMPACT SECTION
         'impact-title': 'Notre Impact Mondial',
-        'impact-countries': 'Pays Atteints',
+       'impact-counties': 'Comtés desservis',
+
         'impact-lives': 'Vies Touchées',
         'impact-projects': 'Projets Réalisés',
         'impact-volunteers': 'Bénévoles Engagés',
@@ -2324,7 +2325,7 @@ const translations = {
 
         // IMPACT SECTION
         'impact-title': 'Unser Globaler Einfluss',
-        'impact-countries': 'Erreichte Länder',
+        'impact-counties': 'Erreichte Bezirke',
         'impact-lives': 'Berührte Leben',
         'impact-projects': 'Abgeschlossene Projekte',
         'impact-volunteers': 'Engagierte Freiwillige',
@@ -2424,7 +2425,7 @@ const translations = {
 
         // IMPACT SECTION
         'impact-title': 'Nuestro Impacto Global',
-        'impact-countries': 'Países Alcanzados',
+        'impact-counties': 'Condados alcanzados',
         'impact-lives': 'Vidas Impactadas',
         'impact-projects': 'Proyectos Completados',
         'impact-volunteers': 'Voluntarios Comprometidos',
@@ -2526,7 +2527,7 @@ const translations = {
         
         // IMPACT SECTION
         'impact-title': 'Il Nostro Impatto Globale',
-        'impact-countries': 'Paesi Raggiunti',
+        'impact-counties': 'Contee raggiunte',
         'impact-lives': 'Vite Toccate',
         'impact-projects': 'Progetti Completati',
         'impact-volunteers': 'Volontari Coinvolti',
@@ -2632,7 +2633,7 @@ const translations = {
 
         // IMPACT SECTION
         'impact-title': 'Athari Yetu ya Ulimwenguni',
-        'impact-countries': 'Nchi Zilizofikiwa',
+        'impact-counties': 'Kaunti Zilizofikiwa',
         'impact-lives': 'Maisha Yaliyoguswa',
         'impact-projects': 'Miradi Iliyokamilika',
         'impact-volunteers': 'Wajitoleaji Walioshiriki',
