--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@ footer.site-footer{
   color: #fff;
   background: 
     linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-    url("https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg");
+    url("https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766232038/ChatGPT_Image_Dec_20_2025_02_59_54_PM_r1cnjh.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
