--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@ footer.site-footer{
   text-align: center;
   color: #fff;
   background: 
-    linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+    linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), /* lighter overlay */
     url("https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766232038/ChatGPT_Image_Dec_20_2025_02_59_54_PM_r1cnjh.jpg");
   background-size: cover;
   background-position: center;
