--- a/index.html
+++ b/index.html
@@ -1751,7 +1751,7 @@ footer.site-footer{
 <div class="focus-wrapper">
 
   <div class="focus-hero">
-   
+   <h2>OUR FOCUS AREAS</h2>
    
   </div>
 
