--- a/index.html
+++ b/index.html
@@ -1903,71 +1903,36 @@ footer.site-footer{
 
 
 
-
 <footer class="site-footer" style="background:#0C2856;color:#fff;font-family:Arial, sans-serif;padding:40px 0;">
   <div style="max-width:1100px;margin:auto;padding:0 20px;">
 
-    <!-- Top Grid -->
-    <div style="display:flex;flex-wrap:wrap;justify-content:space-between;gap:30px;">
+    <p style="margin:0;line-height:1.8;font-size:15px;">
+      <strong>Swiss Aid Connect Foundation</strong><br>
+      Komrades Business Complex<br>
+      P.O. Box 78547-00100, Nairobi<br><br>
 
-      <!-- Left Links -->
-      <div style="display:flex;gap:50px;flex-wrap:wrap;">
-        <div>
-          <h4 style="font-size:15px;font-weight:700;color:#F5C22D;letter-spacing:1px;margin-bottom:10px;">NEWS</h4>
-          <p><a class="ft" href="#">Updates</a></p>
-          <p><a class="ft" href="#">Announcements</a></p>
-        </div>
+      Email: 
+      <a href="mailto:info@swissaidconnectfoundation.com" style="color:#F5C22D;text-decoration:none;">
+        info@swissaidconnectfoundation.com
+      </a><br>
 
-        <div>
-          <h4 style="font-size:15px;font-weight:700;color:#F5C22D;letter-spacing:1px;margin-bottom:10px;">CONNECT</h4>
-          <p><a class="ft" href="#">Contact Us</a></p>
-          <p><a class="ft" href="#">Get Involved</a></p>
-          <p><a class="ft" href="#">Privacy Policy</a></p>
-        </div>
-      </div>
+      WhatsApp: 
+      <a href="https://wa.me/41765258145" target="_blank" style="color:#F5C22D;text-decoration:none;">
+        +41 76 525 81 45
+      </a><br>
 
-      <!-- Right: Social + Office -->
-      <div style="text-align:left;">
-        <div style="font-size:22px;display:flex;gap:15px;margin-bottom:15px;">
-          <a class="ft" href="#">📘</a>
-          <a class="ft" href="#">📷</a>
-          <a class="ft" href="#">💼</a>
-          <a class="ft" href="#">▶</a>
-          <a class="ft" href="#">📱</a>
-        </div>
+      Phone: +41 76 525 81 45
+    </p>
 
-        <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763381089/WhatsApp_Image_2025-11-17_at_9.22.25_AM_c17ghd.jpg" alt="Swiss Aid Connect Foundation" style="height:35px;margin:10px 0;display:block;">
-
-        <p style="margin:0;line-height:1.6;">
-          Swiss Aid Connect Foundation<br>
-          45 Example Avenue<br>
-          Nairobi, Kenya<br>
-          +254 712 345 678
-        </p>
-      </div>
-
-    </div>
-
-    <!-- Also of Interest -->
-    <div style="margin-top:30px;font-size:15px;">
-      <span style="color:#F5C22D;font-weight:700;letter-spacing:1px;">ALSO OF INTEREST</span>
-      &nbsp;&nbsp;
-      <a class="ft" href="#">Our Work</a> &nbsp;&bull;&nbsp;
-      <a class="ft" href="#">Donate</a> &nbsp;&bull;&nbsp;
-      <a class="ft" href="#">Volunteer</a>
-    </div>
-
-    <!-- Separator Line -->
     <div style="border-bottom:1px solid rgba(255,255,255,0.3);margin:25px 0;"></div>
 
-    <!-- Disclaimer -->
     <p style="font-size:13px;line-height:1.7;max-width:900px;">
-      Swiss Aid Connect Foundation is a nonprofit organization supporting communities through education, health, youth programs, and humanitarian assistance. Website content may be updated as our work expands.
+      Swiss Aid Connect Foundation is a nonprofit organization supporting communities through education, health, youth programs, and humanitarian assistance.
     </p>
 
   </div>
 
-  <div style="text-align:center;margin-top:20px;">
+  <div style="text-align:center;margin-top:20px;font-size:13px;">
     © <span id="year"></span> Swiss Aid Connect Foundation • All rights reserved.
   </div>
 
@@ -1975,6 +1940,7 @@ footer.site-footer{
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </footer>
+
 
 
 
