--- a/index.html
+++ b/index.html
@@ -2150,25 +2150,24 @@ const translations = {
         'join-google-btn': 'Continue with Google',
         'join-home-btn': 'Return to site',
 
-        // FOOTER
-        'news-footer-title': 'NEWS',
-        'news-updates': 'Updates',
-        'news-announcements': 'Announcements',
-        'media-footer-title': 'MEDIA',
-        'media-gallery': 'Gallery',
-        'media-downloads': 'Downloads',
-        'connect-footer-title': 'CONNECT',
-        'connect-contact': 'Contact Us',
-        'connect-involved': 'Get Involved',
-        'connect-privacy': 'Privacy Policy',
-        'org-line1-2-address': 'Swiss Aid Connect Foundation<br>45 Example Avenue<br>Zurich, Switzerland 8001<br>+41 44 555 88 99',
-        'interest-footer-title': 'ALSO OF INTEREST',
-        'interest-work': 'Our Work',
-        'interest-donate': 'Donate',
-        'interest-volunteer': 'Volunteer',
-        'disclaimer-text': 'Swiss Aid Connect Foundation is a nonprofit organization committed to supporting communities through education, health, youth programs, and humanitarian assistance. Information on this website may be updated as our work expands.',
-        'footer-copyright': 'Swiss Aid Connect Foundation • All rights reserved.',
-        'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • All rights reserved.'
+       // FOOTER
+'footer-title': 'Swiss Aid Connect Foundation',
+
+'footer-address': 'Komrades Business Complex<br>Po. Box 78547-00100<br>Nairobi, Kenya',
+
+'footer-email-label': 'Email:',
+'footer-email': 'info@swissaidconnectfoundation.com',
+
+'footer-whatsapp-label': 'WhatsApp:',
+'footer-whatsapp-number': '+41 76 525 81 45',
+
+'footer-phone-label': 'Phone:',
+'footer-phone-number': '+41 76 525 81 45',
+
+'footer-disclaimer': 'Swiss Aid Connect Foundation supports education and community-focused initiatives. External information and services may be updated from time to time.',
+
+'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • All rights reserved.'
+
     },
     // French
     'fr': {
@@ -2251,25 +2250,24 @@ const translations = {
         'join-google-btn': 'Continuer avec Google',
         'join-home-btn': 'Retour au site',
 
-        // FOOTER
-        'news-footer-title': 'ACTUALITÉS',
-        'news-updates': 'Mises à jour',
-        'news-announcements': 'Annonces',
-        'media-footer-title': 'MÉDIAS',
-        'media-gallery': 'Galerie',
-        'media-downloads': 'Téléchargements',
-        'connect-footer-title': 'CONNECTER',
-        'connect-contact': 'Nous Contacter',
-        'connect-involved': 'S\'Impliquer',
-        'connect-privacy': 'Politique de Confidentialité',
-        'org-line1-2-address': 'Fondation Swiss Aid Connect<br>45 Example Avenue<br>Zurich, Suisse 8001<br>+41 44 555 88 99',
-        'interest-footer-title': 'ÉGALEMENT D\'INTÉRÊT',
-        'interest-work': 'Notre Travail',
-        'interest-donate': 'Faire un Don',
-        'interest-volunteer': 'Devenir Bénévole',
-        'disclaimer-text': 'La Fondation Swiss Aid Connect est une organisation à but non lucratif engagée à soutenir les communautés par l\'éducation, la santé, les programmes pour les jeunes et l\'assistance humanitaire. Les informations sur ce site Web peuvent être mises à jour à mesure que notre travail se développe.',
-        'footer-copyright': 'Fondation Swiss Aid Connect • Tous droits réservés.',
-        'footer-copyright-full': '© {{year}} Fondation Swiss Aid Connect • Tous droits réservés.'
+       // FOOTER
+'footer-title': 'Fondation Swiss Aid Connect',
+
+'footer-address': 'Komrades Business Complex<br>Boîte Postale 78547-00100<br>Nairobi, Kenya',
+
+'footer-email-label': 'E-mail :',
+'footer-email': 'info@swissaidconnectfoundation.com',
+
+'footer-whatsapp-label': 'WhatsApp :',
+'footer-whatsapp-number': '+41 76 525 81 45',
+
+'footer-phone-label': 'Téléphone :',
+'footer-phone-number': '+41 76 525 81 45',
+
+'footer-disclaimer': 'La Fondation Swiss Aid Connect soutient l’éducation et les initiatives communautaires. Les informations et services externes peuvent être mis à jour périodiquement.',
+
+'footer-copyright-full': '© {{year}} Fondation Swiss Aid Connect • Tous droits réservés.'
+
     },
     // German
     'de': {
@@ -2352,24 +2350,23 @@ const translations = {
         'join-home-btn': 'Zurück zur Seite',
 
         // FOOTER
-        'news-footer-title': 'NEUIGKEITEN',
-        'news-updates': 'Aktuelles',
-        'news-announcements': 'Mitteilungen',
-        'media-footer-title': 'MEDIEN',
-        'media-gallery': 'Galerie',
-        'media-downloads': 'Downloads',
-        'connect-footer-title': 'VERBINDEN',
-        'connect-contact': 'Kontaktieren Sie uns',
-        'connect-involved': 'Mitmachen',
-        'connect-privacy': 'Datenschutzrichtlinie',
-        'org-line1-2-address': 'Swiss Aid Connect Stiftung<br>45 Example Avenue<br>Zürich, Schweiz 8001<br>+41 44 555 88 99',
-        'interest-footer-title': 'AUCH INTERESSANT',
-        'interest-work': 'Unsere Arbeit',
-        'interest-donate': 'Spenden',
-        'interest-volunteer': 'Freiwillige',
-        'disclaimer-text': 'Die Swiss Aid Connect Stiftung ist eine gemeinnützige Organisation, die sich der Unterstützung von Gemeinschaften durch Bildung, Gesundheit, Jugendprogramme und humanitäre Hilfe verschrieben hat. Die Informationen auf dieser Website können bei Erweiterung unserer Arbeit aktualisiert werden.',
-        'footer-copyright': 'Swiss Aid Connect Stiftung • Alle Rechte vorbehalten.',
-        'footer-copyright-full': '© {{year}} Swiss Aid Connect Stiftung • Alle Rechte vorbehalten.'
+'footer-title': 'Swiss Aid Connect Stiftung',
+
+'footer-address': 'Komrades Business Complex<br>Postfach 78547-00100<br>Nairobi, Kenia',
+
+'footer-email-label': 'E-Mail:',
+'footer-email': 'info@swissaidconnectfoundation.com',
+
+'footer-whatsapp-label': 'WhatsApp:',
+'footer-whatsapp-number': '+41 76 525 81 45',
+
+'footer-phone-label': 'Telefon:',
+'footer-phone-number': '+41 76 525 81 45',
+
+'footer-disclaimer': 'Die Swiss Aid Connect Stiftung unterstützt Bildungs- und Gemeinschaftsinitiativen. Externe Informationen und Dienste können regelmäßig aktualisiert werden.',
+
+'footer-copyright-full': '© {{year}} Swiss Aid Connect Stiftung • Alle Rechte vorbehalten.'
+
     },
     // Spanish (Castilian)
     'es': {
@@ -2451,25 +2448,24 @@ const translations = {
         'join-google-btn': 'Continuar con Google',
         'join-home-btn': 'Volver al sitio',
 
-        // FOOTER
-        'news-footer-title': 'NOTICIAS',
-        'news-updates': 'Actualizaciones',
-        'news-announcements': 'Anuncios',
-        'media-footer-title': 'MEDIOS',
-        'media-gallery': 'Galería',
-        'media-downloads': 'Descargas',
-        'connect-footer-title': 'CONECTAR',
-        'connect-contact': 'Contáctanos',
-        'connect-involved': 'Participa',
-        'connect-privacy': 'Política de Privacidad',
-        'org-line1-2-address': 'Swiss Aid Connect Fundación<br>45 Example Avenue<br>Zúrich, Suiza 8001<br>+41 44 555 88 99',
-        'interest-footer-title': 'TAMBIÉN DE INTERÉS',
-        'interest-work': 'Nuestro Trabajo',
-        'interest-donate': 'Dona',
-        'interest-volunteer': 'Voluntario',
-        'disclaimer-text': 'Swiss Aid Connect Foundation es una organización sin fines de lucro comprometida a apoyar a las comunidades a través de la educación, la salud, los programas para jóvenes y la asistencia humanitaria. La información en este sitio web puede actualizarse a medida que nuestro trabajo se expande.',
-        'footer-copyright': 'Swiss Aid Connect Foundation • Todos los derechos reservados.',
-        'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • Todos los derechos reservados.'
+       // FOOTER
+'footer-title': 'Fundación Swiss Aid Connect',
+
+'footer-address': 'Komrades Business Complex<br>Apdo. Postal 78547-00100<br>Nairobi, Kenia',
+
+'footer-email-label': 'Correo electrónico:',
+'footer-email': 'info@swissaidconnectfoundation.com',
+
+'footer-whatsapp-label': 'WhatsApp:',
+'footer-whatsapp-number': '+41 76 525 81 45',
+
+'footer-phone-label': 'Teléfono:',
+'footer-phone-number': '+41 76 525 81 45',
+
+'footer-disclaimer': 'La Fundación Swiss Aid Connect apoya iniciativas educativas y comunitarias. La información y los servicios externos pueden actualizarse periódicamente.',
+
+'footer-copyright-full': '© {{year}} Fundación Swiss Aid Connect • Todos los derechos reservados.'
+
     },
 
 
@@ -2553,25 +2549,24 @@ const translations = {
         'join-google-btn': 'Continua con Google',
         'join-home-btn': 'Ritorna al sito',
 
-        // FOOTER
-        'news-footer-title': 'NOTIZIE',
-        'news-updates': 'Aggiornamenti',
-        'news-announcements': 'Annunci',
-        'media-footer-title': 'MEDIA',
-        'media-gallery': 'Galleria',
-        'media-downloads': 'Download',
-        'connect-footer-title': 'CONNETTITI',
-        'connect-contact': 'Contattaci',
-        'connect-involved': 'Partecipa',
-        'connect-privacy': 'Informativa sulla Privacy',
-        'org-line1-2-address': 'Swiss Aid Connect Fondazione<br>45 Example Avenue<br>Zurich, Svizzera 8001<br>+41 44 555 88 99',
-        'interest-footer-title': 'ANCHE DI INTERESSE',
-        'interest-work': 'Il Nostro Lavoro',
-        'interest-donate': 'Dona',
-        'interest-volunteer': 'Volontariato',
-        'disclaimer-text': 'Swiss Aid Connect Foundation è un\'organizzazione no-profit impegnata a sostenere le comunità attraverso l\'istruzione, la salute, i programmi giovanili e l\'assistenza umanitaria. Le informazioni su questo sito web possono essere aggiornate man mano che il nostro lavoro si espande.',
-        'footer-copyright': 'Swiss Aid Connect Foundation • Tutti i diritti riservati.',
-        'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • Tutti i diritti riservati.'
+       // FOOTER
+'footer-title': 'Fondazione Swiss Aid Connect',
+
+'footer-address': 'Komrades Business Complex<br>Casella Postale 78547-00100<br>Nairobi, Kenya',
+
+'footer-email-label': 'Email:',
+'footer-email': 'info@swissaidconnectfoundation.com',
+
+'footer-whatsapp-label': 'WhatsApp:',
+'footer-whatsapp-number': '+41 76 525 81 45',
+
+'footer-phone-label': 'Telefono:',
+'footer-phone-number': '+41 76 525 81 45',
+
+'footer-disclaimer': 'La Fondazione Swiss Aid Connect sostiene iniziative educative e comunitarie. Le informazioni e i servizi esterni possono essere aggiornati periodicamente.',
+
+'footer-copyright-full': '© {{year}} Fondazione Swiss Aid Connect • Tutti i diritti riservati.'
+
     },
 
 
@@ -2660,24 +2655,23 @@ const translations = {
         'join-home-btn': 'Rudi kwenye tovuti',
 
         // FOOTER
-        'news-footer-title': 'HABARI',
-        'news-updates': 'Sasisho',
-        'news-announcements': 'Matangazo',
-        'media-footer-title': 'VYOMBO VYA HABARI',
-        'media-gallery': 'Matunzio',
-        'media-downloads': 'Vipakuliwa',
-        'connect-footer-title': 'UNGANISHA',
-        'connect-contact': 'Wasiliana Nasi',
-        'connect-involved': 'Shiriki',
-        'connect-privacy': 'Sera ya Faragha',
-        'org-line1-2-address': 'Swiss Aid Connect Foundation<br>45 Example Avenue<br>Zurich, Switzerland 8001<br>+41 44 555 88 99',
-        'interest-footer-title': 'PIA KWA MASLAHI YAKO',
-        'interest-work': 'Kazi Yetu',
-        'interest-donate': 'Toa Mchango',
-        'interest-volunteer': 'Mjitoleaji',
-        'disclaimer-text': 'Swiss Aid Connect Foundation ni shirika lisilo la faida lililojitolea kusaidia jamii kupitia elimu, afya, mipango ya vijana, na msaada wa kibinadamu. Taarifa kwenye tovuti hii inaweza kusasishwa kadri kazi yetu inavyopanuka.',
-        'footer-copyright': 'Swiss Aid Connect Foundation • Haki zote zimehifadhiwa.',
-        'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • Haki zote zimehifadhiwa.'
+'footer-title': 'Swiss Aid Connect Foundation',
+
+'footer-address': 'Komrades Business Complex<br>Sanduku la Posta 78547-00100<br>Nairobi, Kenya',
+
+'footer-email-label': 'Barua pepe:',
+'footer-email': 'info@swissaidconnectfoundation.com',
+
+'footer-whatsapp-label': 'WhatsApp:',
+'footer-whatsapp-number': '+41 76 525 81 45',
+
+'footer-phone-label': 'Simu:',
+'footer-phone-number': '+41 76 525 81 45',
+
+'footer-disclaimer': 'Swiss Aid Connect Foundation inaunga mkono miradi ya elimu na jamii. Taarifa na huduma za tovuti za nje zinaweza kusasishwa mara kwa mara.',
+
+'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • Haki zote zimehifadhiwa.'
+
     }
 };
 
