--- a/index.html
+++ b/index.html
@@ -1900,44 +1900,37 @@ footer.site-footer{
 
 
 
-
-
 <footer class="site-footer" style="background:#0C2856;color:#fff;font-family:Arial, sans-serif;padding:40px 0;">
   <div style="max-width:1100px;margin:auto;padding:0 20px;">
 
     <p style="margin:0;line-height:1.8;font-size:15px;">
-      <strong data-i18n="footer-org-name"></strong><br>
-      <span data-i18n="footer-address-line1"></span><br>
-      <span data-i18n="footer-address-line2"></span><br><br>
+      <strong>Swiss Aid Connect Foundation</strong><br>
+      Komrades Business Complex<br>
+      P.O. Box 78547-00100, Nairobi<br><br>
 
-      <span data-i18n="footer-email-label"></span>
-      <a href="mailto:info@swissaidconnectfoundation.com"
-         style="color:#F5C22D;text-decoration:none;"
-         data-i18n="footer-email">
+      Email: 
+      <a href="mailto:info@swissaidconnectfoundation.com" style="color:#F5C22D;text-decoration:none;">
+        info@swissaidconnectfoundation.com
       </a><br>
 
-      <span data-i18n="footer-whatsapp-label"></span>
-      <a href="https://wa.me/41765258145"
-         target="_blank"
-         style="color:#F5C22D;text-decoration:none;"
-         data-i18n="footer-whatsapp-number">
+      WhatsApp: 
+      <a href="https://wa.me/41765258145" target="_blank" style="color:#F5C22D;text-decoration:none;">
+        +41 76 525 81 45
       </a><br>
 
-      <span data-i18n="footer-phone-label"></span>
-      <span data-i18n="footer-phone-number"></span>
+      Phone: +41 76 525 81 45
     </p>
 
     <div style="border-bottom:1px solid rgba(255,255,255,0.3);margin:25px 0;"></div>
 
-    <p style="font-size:13px;line-height:1.7;max-width:900px;"
-       data-i18n="footer-disclaimer">
+    <p style="font-size:13px;line-height:1.7;max-width:900px;">
+      Swiss Aid Connect Foundation is a nonprofit organization supporting communities through education, health, youth programs, and humanitarian assistance.
     </p>
 
   </div>
 
-  <div style="text-align:center;margin-top:20px;font-size:13px;"
-       data-i18n="footer-copyright-full"
-       data-i18n-params='{"year": "<span id=\"year\"></span>"}'>
+  <div style="text-align:center;margin-top:20px;font-size:13px;">
+    © <span id="year"></span> Swiss Aid Connect Foundation • All rights reserved.
   </div>
 
   <script>
